--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/compiler-cli": "~9.1.11",
     "@angular/core": "~9.1.11",
     "@angular/forms": "~9.1.11",
+    "@angular/localize": "^9.1.12",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
