--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "ngx-toastr": "^12.1.0",
+    "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
