--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "ngx-toastr": "^12.1.0",
     "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
+    "request": "^2.88.2",
     "rxjs": "~6.6.0",
     "tslib": "^1.10.0",
     "typescript": "~3.8.3",
